<resources>
    <string name="app_name">Projeto Raphael</string>
    <string name="cadastrar_servico">Criar O.S.</string>
    <string name="ediatar_ordem_servico">Editar O.S.</string>
    <string name="assumir_os">Assumir OS</string>
    <string name="servico_aberto">Serviços em Aberto</string>
    <string name="servico_fechado">Serviços Fechados</string>
    <string name="nome_cliente">Nome do cliente</string>
    <string name="codigo_cliente">Código cliente</string>
    <string name="cpf_cnpj">Cpf/Cnpj do cliente</string>
    <string name="dados_do_cliente">Dados do cliente</string>
    <string name="informacoes_do_servico">Informações do serviço</string>
    <string name="descricao_do_servico">Descrição do serviço</string>
    <string name="endereco_servico">Endereço do serviço</string>
    <string name="endereco">Endereço</string>
    <string name="logradouro">Rua</string>
    <string name="cep">Cep</string>
    <string name="localidade">Cidade</string>
    <string name="numero">Nº</string>
    <string name="uf">Estado</string>
    <string name="insira_nome_cliente">Insira o nome do cliente</string>
    <string name="insira_cpf_cliente">Insira o cpf do cliente</string>
    <string name="preencha_endereco">Preencha o endereço completo</string>
    <string name="preencha_descricao_servico">Preencha a descricao do serviço</string>
    <string name="os_gerada_sucesso">Ordem de serviço gerada com sucesso</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="ordem_de_servico">Ordem de Serviço</string>
    <string name="localizar">Localizar</string>
    <string name="camera">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="numero_os">O.S.: </string>
    <string name="abrir">abrir</string>
    <string name="fechar">fechar</string>
    <string name="tipo_servico">Tipo do serviço</string>
    <string name="ver_imagem">Ver imagem</string>
    <string name="ok">OK</string>
    <string name="escolher_produto">Escolher produto</string>
    <string name="internet_discada">Internet discada</string>
    <string name="internet_4g">Internet 4G</string>
    <string name="internet_5g">Internet 5G</string>
    <string name="produtos">Produtos</string>
    <string name="escolha_o_produto">Escolha o produto</string>
    <string name="produto_selecionado">Produto selecionado</string>
    <string name="salvar">Salvar</string>
    <string name="compartilhar">Compartilhar</string>

    <string-array name="lista_servico">
        <item>Instalação</item>
        <item>Reparo</item>
        <item>Desistalação</item>
    </string-array>

    <string-array name="estados">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
</resources>
