<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/produtos"
        android:textSize="23sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/alerta_produto_radioGroup"
        android:paddingStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/alerta_produto_internet_disc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingTop="8dp"
            android:text="@string/internet_discada"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/alerta_produto_internet_4g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/internet_4g"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/alerta_produto_internet_5g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/internet_5g"
            android:textSize="15sp" />
    </RadioGroup>
</LinearLayout>