<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/assumirOsId"
        android:layout_width="@dimen/tamanho_icones_servicos"
        android:layout_height="@dimen/tamanho_icones_servicos"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtServicosAbertos"
        app:srcCompat="@drawable/assumir_os" />

    <TextView
        android:id="@+id/txtAssumirOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:text="@string/assumir_os"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assumirOsId" />

    <TextView
        android:id="@+id/txtServicosFechados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/servico_fechado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servicosFechadosId" />

    <ImageView
        android:id="@+id/servicosFechadosId"
        android:layout_width="@dimen/tamanho_icones_servicos"
        android:layout_height="@dimen/tamanho_icones_servicos"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCadastrarServicoId"
        app:srcCompat="@drawable/post_it_fechado" />

    <TextView
        android:id="@+id/txtServicosAbertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/servico_aberto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servicosAbertosId" />

    <ImageView
        android:id="@+id/servicosAbertosId"
        android:layout_width="@dimen/tamanho_icones_servicos"
        android:layout_height="@dimen/tamanho_icones_servicos"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/post_it_aberto" />

    <ImageView
        android:id="@+id/cadastrarServicoId"
        android:layout_width="@dimen/tamanho_icones_servicos"
        android:layout_height="@dimen/tamanho_icones_servicos"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cadastrar_servico" />

    <TextView
        android:id="@+id/txtCadastrarServicoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/cadastrar_servico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastrarServicoId" />

</android.support.constraint.ConstraintLayout>